# stereo-vo

./: CMakeLists.txt  README.md
config/: kitti_stereo_calib.yaml
src/: drawers.cpp  featureDetectionAndTracking.cpp  filter.cpp  init.cpp  paramreader.cpp  svo.cpp  svo.h
